--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,7 @@
     --input-bg: #343a40;
     --input-border: #C2B280;
     --button-bg: linear-gradient(90deg, #C2B280, #b0a070);
-    --table-header-bg: linear-gradient(90deg, #C2B280, #b0a070);
-    --table-bg: #343a40;
+    --table-header-bg: linear-gradient(90deg, #C2B280, #b0a070    --table-bg: #343a40;
     --divider-bg: linear-gradient(#C2B280, #b0a070);
 }
 
@@ -103,8 +102,8 @@ body {
     font-size: 0.8em;
     padding: 4px;
     text-align: center;
-    background: var(--input-bg) padding-box, linear-gradient(90deg, #C2B280, #b0a070) border-box;
-    border: 2px solid transparent;
+    background: var(--input-bg);
+    border: none;
     border-radius: 8px;
     color: var(--text-color);
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -148,8 +147,8 @@ body {
     background: #555555;
     border-radius: 5px;
     box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-    border-left: 1px solid #333333;
-    border-right: 1px solid #333333;
+    border-left: 1px solid #d3d3d3;
+    border-right: 1px solid #d3d3d3;
 }
 
 .form-range::-webkit-slider-thumb {
@@ -160,7 +159,7 @@ body {
     height: 12px;
     cursor: pointer;
     box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    transform: translateY(-25%);
+    transform: translateY(0%);
     -webkit-appearance: none;
 }
 
@@ -172,7 +171,7 @@ body {
     height: 12px;
     cursor: pointer;
     box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    transform: translateY(-25%);
+    transform: translateY(0%);
 }
 
 .input-group {
