--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,8 @@ body {
 .form-group {
     flex: 1;
     min-width: 120px;
-    max-width: 150px;
+    max-width: 200px;
+    width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: stretch;
@@ -100,9 +101,9 @@ body {
 }
 
 .form-control {
-    height: 26px;
-    font-size: 0.8em;
-    padding: 4px;
+    height: 21px;
+    font-size: 0.75em;
+    padding: 3px;
     text-align: center;
     background: var(--input-bg);
     border: none;
@@ -118,9 +119,9 @@ body {
 }
 
 .form-select {
-    height: 26px;
-    font-size: 0.8em;
-    padding: 4px 25px 4px 4px;
+    height: 21px;
+    font-size: 0.75em;
+    padding: 3px 20px 3px 3px;
     text-align: center;
     background: var(--input-bg) padding-box, linear-gradient(90deg, #C2B280, #b0a070) border-box;
     border: 1px solid #d3d3d3;
@@ -129,15 +130,15 @@ body {
     appearance: none;
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="%23C2B280" d="M0 4l6 6 6-6z"/></svg>');
     background-repeat: no-repeat;
-    background-position: right 10px center;
+    background-position: right 8px center;
     transition: background-color 0.3s ease, color 0.3s ease;
     box-sizing: border-box;
 }
 
 .form-select.prowizja-select {
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path fill="%23C2B280" d="M0 3l5 5 5-5z"/></svg>');
-    background-position: right 8px center;
-    padding-right: 20px;
+    background-position: right 6px center;
+    padding-right: 18px;
 }
 
 .form-select:focus {
@@ -185,15 +186,20 @@ body {
     display: flex;
     align-items: stretch;
     border: 1px solid #d3d3d3;
+    border-left: none;
     border-radius: 8px;
     overflow: hidden;
     box-sizing: border-box;
 }
 
+.input-group:has(.prowizja-select) {
+    border-right: none;
+}
+
 .input-group-text {
-    height: 26px;
-    font-size: 0.8em;
-    padding: 4px 8px;
+    height: 21px;
+    font-size: 0.75em;
+    padding: 3px 6px;
     background: #e9ecef;
     border-left: 1px solid #d3d3d3;
     border-top: none;
@@ -202,6 +208,15 @@ body {
     border-radius: 0;
     color: #333333;
     box-sizing: border-box;
+    flex: 0 0 40px;
+}
+
+.input-group:has(.prowizja-select) .input-group-text {
+    flex: 0 0 30px;
+}
+
+.input-group:has(.prowizja-select) .form-control {
+    flex: 1;
 }
 
 .sub-info {
@@ -697,29 +712,56 @@ input[type="radio"], input[type="checkbox"] {
 
 @media (max-width: 768px) {
     .form-row {
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     .form-group {
-        max-width: 100%;
+        max-width: 150px;
+        width: 150px;
     }
 
     .form-container, .result-container, .harmonogram-container {
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
         gap: 20px;
     }
 
-    .divider {
-        display: none;
-    }
-
-    .control-buttons {
-        gap: 8px;
+    .form-wrapper, .result-wrapper {
+        max-width: 100%;
     }
 }
 
 @media (max-width: 576px) {
+    .form-row {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .form-group {
+        max-width: 150px;
+        width: 150px;
+    }
+
+    .form-container.compare-checkbox input:checked ~ .form-container {
+        flex-direction: column;
+    }
+
+    .form-container.compare-checkbox input:checked ~ .form-container .form-wrapper:last-child {
+        order: 2;
+    }
+
+    .form-container.compare-checkbox input:checked ~ .divider,
+    .result-container.compare-checkbox input:checked ~ .divider,
+    .harmonogram-container.compare-checkbox input:checked ~ .divider {
+        display: none;
+    }
+
+    .result-container, .harmonogram-container {
+        flex-direction: column;
+    }
+
     .form-label {
         font-size: 0.7em;
     }
@@ -756,5 +798,25 @@ input[type="radio"], input[type="checkbox"] {
     .form-select.prowizja-select {
         background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8"><path fill="%23C2B280" d="M0 2l4 4 4-4z"/></svg>');
         background-position: right 6px center;
+    }
+}
+
+@media (max-width: 480px) {
+    .form-row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .form-group {
+        max-width: 200px;
+        width: 200px;
+    }
+
+    .form-container, .result-container, .harmonogram-container {
+        flex-direction: column;
+    }
+
+    .divider {
+        display: none;
     }
 }
