--- a/styles.css
+++ b/styles.css
@@ -83,19 +83,12 @@ body {
 }
 
 .form-group {
-    display: flex;
-    flex-direction: column;
-    justify-content: stretch;
-}
-
-.form-group:has(.input-group) {
-    width: fit-content;
-}
-
-.form-group:has(.form-select) {
     flex: 0 0 150px;
     max-width: 150px;
     width: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
 }
 
 .form-group.no-sub-info .sub-info {
@@ -104,17 +97,13 @@ body {
 }
 
 #nadplataSection .form-group, #nadplataSection2 .form-group {
-    width: fit-content;
-}
-
-#nadplataSection .form-group:has(.form-select), #nadplataSection2 .form-group:has(.form-select) {
     flex: 0 0 150px;
     max-width: 150px;
     width: 150px;
 }
 
 .form-label {
-    font-size: 0.75em;
+    font-size: 0.6875em;
     text-transform: uppercase;
     margin-bottom: 3px;
     color: var(--text-color);
@@ -122,7 +111,7 @@ body {
 
 .form-control {
     height: 22px;
-    font-size: 0.75em;
+    font-size: 0.6875em;
     padding: 3px;
     text-align: center;
     background: var(--input-bg);
@@ -140,7 +129,7 @@ body {
 
 .form-select {
     height: 22px;
-    font-size: 0.75em;
+    font-size: 0.6875em;
     padding: 0 20px 0 3px;
     text-align: center;
     background: var(--input-bg) padding-box, linear-gradient(90deg, #C2B280, #b0a070) border-box;
@@ -211,8 +200,6 @@ body {
     border: 1px solid #d3d3d3;
     border-radius: 8px;
     box-sizing: border-box;
-    width: fit-content;
-    min-width: 100px;
 }
 
 .input-group:has(.prowizja-select) {
@@ -221,7 +208,7 @@ body {
 
 .input-group-text {
     height: 22px;
-    font-size: 0.75em;
+    font-size: 0.6875em;
     padding: 3px 6px;
     background: #e9ecef;
     border-left: 1px solid #d3d3d3;
@@ -233,6 +220,7 @@ body {
     box-sizing: border-box;
     flex: 0 0 40px;
     z-index: 1;
+    text-align: center;
 }
 
 .input-group:has(.prowizja-select) .input-group-text {
@@ -244,7 +232,7 @@ body {
 }
 
 .sub-info {
-    font-size: 0.6em;
+    font-size: 0.5375em;
     color: var(--text-color);
     margin-top: 5px;
     text-align: left;
@@ -266,13 +254,13 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .radio-label, .checkbox-label {
-    font-size: 0.6em;
+    font-size: 0.5375em;
     margin-left: 0;
     color: var(--text-color);
 }
 
 .checkbox-label.nadplata-label {
-    font-size: 0.7em;
+    font-size: 0.6375em;
     font-weight: bold;
 }
 
@@ -508,7 +496,7 @@ input[type="radio"], input[type="checkbox"] {
 
 .btn-toggle {
     cursor: pointer;
-    font-size: 0.9em;
+    font-size: 0.8375em;
     color: #007bff;
     text-decoration: underline;
     margin-bottom: 15px;
@@ -523,9 +511,9 @@ input[type="radio"], input[type="checkbox"] {
 
 .btn-primary, .btn-secondary {
     background: var(--button-bg);
-    border unone;
+    border: none;
     color: #000000;
-    font-size: 0.9em;
+    font-size: 0.8375em;
     padding: 8px 25px;
     min-width: 150px;
     border-radius: 5px;
@@ -543,7 +531,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .btn-sm {
-    font-size: 0.75em;
+    font-size: 0.6875em;
     padding: 5px 15px;
     min-width: 100px;
     cursor: pointer;
@@ -576,14 +564,14 @@ input[type="radio"], input[type="checkbox"] {
     right: 15px;
     display: flex;
     align-items: center;
-    font-size: 0.9em;
+    font-size: 0.8375em;
     color: var(--text-color);
 }
 
 .compare-checkbox .checkbox-label {
     display: flex;
     align-items: center;
-    font-size: 0.8em;
+    font-size: 0.5375em;
     color: var(--text-color);
     cursor: pointer;
 }
@@ -737,7 +725,7 @@ input[type="radio"], input[type="checkbox"] {
     background: linear-gradient(90deg, #C2B280, #b0a070);
     border: none;
     border-radius: 50%;
-    font-size: 0.9em;
+    font-size: 0.8375em;
     color: #000000;
     cursor: pointer;
     display: flex;
@@ -761,20 +749,16 @@ input[type="radio"], input[type="checkbox"] {
         justify-content: center;
     }
 
-    .form-group:has(.form-select) {
+    .form-group {
         flex: 0 0 125px;
         max-width: 125px;
         width: 125px;
     }
 
-    #nadplataSection .form-group:has(.form-select), #nadplataSection2 .form-group:has(.form-select) {
+    #nadplataSection .form-group, #nadplataSection2 .form-group {
         flex: 0 0 125px;
         max-width: 125px;
         width: 125px;
-    }
-
-    .input-group {
-        min-width: 90px;
     }
 
     .form-container, .result-container, .harmonogram-container {
@@ -795,20 +779,16 @@ input[type="radio"], input[type="checkbox"] {
         flex-wrap: wrap;
     }
 
-    .form-group:has(.form-select) {
+    .form-group {
         flex: 0 0 100px;
         max-width: 100px;
         width: 100px;
     }
 
-    #nadplataSection .form-group:has(.form-select), #nadplataSection2 .form-group:has(.form-select) {
+    #nadplataSection .form-group, #nadplataSection2 .form-group {
         flex: 0 0 100px;
         max-width: 100px;
         width: 100px;
-    }
-
-    .input-group {
-        min-width: 80px;
     }
 
     .form-container.compare-checkbox input:checked ~ .form-container {
@@ -830,15 +810,15 @@ input[type="radio"], input[type="checkbox"] {
     }
 
     .form-label {
-        font-size: 0.7em;
+        font-size: 0.6375em;
     }
 
     .form-control, .form-select, .input-group-text {
-        font-size: 0.75em;
+        font-size: 0.6875em;
     }
 
     .btn-primary, .btn-secondary {
-        font-size: 0.8em;
+        font-size: 0.7375em;
         padding: 6px 20px;
     }
 
@@ -868,20 +848,16 @@ input[type="radio"], input[type="checkbox"] {
         align-items: center;
     }
 
-    .form-group:has(.form-select) {
+    .form-group {
         flex: 0 0 130px;
         max-width: 130px;
         width: 130px;
     }
 
-    #nadplataSection .form-group:has(.form-select), #nadplataSection2 .form-group:has(.form-select) {
+    #nadplataSection .form-group, #nadplataSection2 .form-group {
         flex: 0 0 130px;
         max-width: 130px;
         width: 130px;
-    }
-
-    .input-group {
-        min-width: 90px;
     }
 
     .form-container, .result-container, .harmonogram-container {
